--- a/assets/css/jobs.less
+++ b/assets/css/jobs.less
@@ -24,6 +24,9 @@ h1.x-jobtitle {
     background: #fff;
 }
 
+.x-clearfilter {
+    font-size: @font-standard;
+}
 
 .header-v6 .header-inner-right {
         margin-right: 7px;
@@ -49,7 +52,6 @@ h1.x-jobtitle {
     }
     
 } /* ======== end filters wrapper ===== */
-
 
 
 
