--- a/assets/css/jobwell.less
+++ b/assets/css/jobwell.less
@@ -1,5 +1,17 @@
 .x-job-well {
     padding-top: 15px;
+    
+    .x-matchhilite {
+    color:coral;
+    font-weight: bold;
+    font-style: italic;
+    }
+    
+    .x-matchhilite a {
+    color:coral;
+    font-weight: bold;
+    font-style: italic;
+    }
 
     .x-well {
         padding:6px 0 6px 0;
@@ -14,6 +26,7 @@
         .x-serptitle  {
             //font-family: 'Montserrat', 'Lato';
             font-size: @font-md;
+            line-height: 20px;
             font-weight:bold;
             color: @jfBlue;
         }
