--- a/assets/css/type.less
+++ b/assets/css/type.less
@@ -1,6 +1,6 @@
  @font-xsm: 11px;
  @font-sm: 12px;
- @font-standard: 14px;
- @font-md: 16px;
+ @font-standard: 1.6rem;
+ @font-md: 1.8rem;
  @font-lg: 18px;
  @font-xlg: 20px;
