--- a/assets/css/header.less
+++ b/assets/css/header.less
@@ -13,7 +13,8 @@
 .x-text-logo h1 {
         margin: 0;
         //font-family: Lato;
-        font-family: 'Lato', sans-serif;
+        //font-family: 'Lato', sans-serif;
+        font-family: 'Bevan', cursive;
         letter-spacing: 0.0em;
         font-size: 47px;
         color: #FFF;
