--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -5,7 +5,7 @@ body {
 }
 
 a {
-   color: #337ab7;
+   color: @jfBlue;
    text-decoration:  none;
 }
 
@@ -38,4 +38,12 @@ a {
 
 .x-search-btn {
     min-width: 100px;
+}
+
+.privacy-wrapper {
+    h4 {
+        color:@jfBlue;
+        font-weight: 600;
+    }
+    
 }
