--- a/assets/css/jobs.less
+++ b/assets/css/jobs.less
@@ -6,12 +6,10 @@
     //background: url('../images/bg/bg_pattern1.png') repeat fixed;
 }
 
-
 .x-contentpattern {
     background: url("../img/patterns/breadcrumbs.png");
     background-repeat: repeat;
 }
-
 
 h1.x-jobtitle {
     display: inline-block;
@@ -54,7 +52,6 @@ h1.x-jobtitle {
 } /* ======== end filters wrapper ===== */
 
 
-
 @media (max-width: 1024px) {
   .form-inline .form-control {
     display: inline-block !important;
@@ -67,7 +64,6 @@ h1.x-jobtitle {
 }
 
 /* ================ end job page styles ===================== */
-
 
 @media (max-width: 479px){
     .x-reducepad-5  {
@@ -86,21 +82,16 @@ h1.x-jobtitle {
     }*/
 }
 
-
 @media (min-width: 360px) and (max-width: 479px){
     .x-jobtitle {
         font-size:16px;
     }
 }
 
-
-
-
 @media (min-width: 480px) and (max-width: 991px){
     .x-searchbar-jobs {
 
     }
-    
     .x-reducepad-5
     {
        // padding-right: 5px !important;
@@ -113,8 +104,15 @@ h1.x-jobtitle {
     
 }
 
-
-@media screen and (max-width: 767px) {
+/* this controls (overrides bootstrap default) the offcanvas sidebar */
+@media screen and (max-width: 800px) {
+        .row-offcanvas {
+            position: relative;
+            -webkit-transition: all .25s ease-out;
+            -o-transition: all .25s ease-out;
+            transition: all .25s ease-out;
+        }
+    
         .row-offcanvas-right .sidebar-offcanvas {
             right: -50%;
             margin-right: 15px;
