--- a/assets/css/jobwell.less
+++ b/assets/css/jobwell.less
@@ -1,6 +1,10 @@
 .x-job-well {
     padding-top: 15px;
     
+    a {
+        color: #337ab7;
+    }
+    
     .x-matchhilite {
     color:coral;
     font-weight: bold;
