--- a/assets/css/comp-alert-subscribe.less
+++ b/assets/css/comp-alert-subscribe.less
@@ -1,6 +1,11 @@
 .shop-subscribe {
     padding: 10px;
     
+    p { 
+        color: #FFF;
+        text-align: center;
+    }
+    
     h2 { 
         text-align: center;
          margin: 5px;
