--- a/assets/css/home.less
+++ b/assets/css/home.less
@@ -68,7 +68,7 @@ body {
 }
 /* service blocks section */ 
 .service-box-v1 {
-    margin: 10px 0;
+    margin: 10px -15px;
 }
 .service-box-v1 .service-block {
     padding:10px;
