--- a/assets/css/jobs.less
+++ b/assets/css/jobs.less
@@ -34,6 +34,18 @@ h1.x-jobtitle {
         padding-left:15px;
 }
 
+//styles after submission of email alert form
+.x-alertmessage {
+    
+    background-color:coral;
+    h4 {color:#fff;}
+    
+    p {
+        line-height: 1.2;
+        color: #FFF;
+    }
+}
+
 /* ======== filters wrapper ===== */
 #x_filters {
     .x-emailform {
