--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -2,7 +2,7 @@
 @import "u-blocks.less";
 @import "u-style.less";
 @import "u-header-v6.less";
-@import "u-footer-v6.less";
+@import "u-footer-v1.less";
 @import "colors.less";
 @import "type.less";
 @import "util.less";
@@ -19,6 +19,7 @@
 @import "comp-alert-subscribe-jobs.less";
 @import "comp-werehiring.less";
 @import "jobs.less";
+@import "browse-jobs.less";
 @import "jobwell.less";
 @import "salaries.less";
 @import "comp-footer.less";
