--- a/assets/css/colors.less
+++ b/assets/css/colors.less
@@ -12,8 +12,9 @@
 @searchbarBorder: #CCC;
 
 @footer-bgcolor: #252525;
-@footer-color: #333;
-@footer-linkcolor: #72c02c;
+@footer-color: #FFF;
+@footer-linkcolor: #EEE;
+@footer-linkhovercolor: #FFF;
 @footer-border: @searchbarBorder;
 
 
