--- a/assets/css/comp-alert-subscribe.less
+++ b/assets/css/comp-alert-subscribe.less
@@ -31,6 +31,17 @@
         padding-left: 15px;
         padding-right: 15px;
     }
+    .input-group-btn {
+        vertical-align: top;
+    }
+    
+    .error {
+        color:#fff;
+        font-weight:400;
+    }
+    #email-error {
+        width: 100%;
+    }
 
 }
 
