--- a/assets/css/comp-footer.less
+++ b/assets/css/comp-footer.less
@@ -5,13 +5,24 @@ footer {
     border-bottom: 1px  solid @footer-border;
 }
 
+.copyright {
+    a {
+        color:@footer-linkcolor !important;
+    }
+    a:hover, a:focus, a:active {
+        color:#BED4FF !important;
+    }
+}
 
-.footer-v6 .footer {
+.footer-v1 .footer {
     padding: 20px 0;
     color: #eee;
     
     a, a:hover, a:focus, a:active {
         color:@footer-linkcolor;
+    }
+    a:hover, a:focus, a:active {
+        color: #BED4FF;
     }
     
     .browse-list, .country-list {
