--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -3,23 +3,23 @@ body {
     font-size: @font-standard;
     color: #333;
 }
-
-
+#recentqueries {
+    height:1px;
+    padding:0;
+    margin:0;
+}
 a {
    color: @jfBlue;
    text-decoration:  none;
 }
 
-
 .fa {
     color: @jfBlue;
 }
 
-
 .form-control {
   border-radius: 5px;
 }
-
 
 .btn {
     border-radius: 5px;
