--- a/assets/css/browse-jobs.less
+++ b/assets/css/browse-jobs.less
@@ -4,7 +4,19 @@
     width: 38px;
     height: 42px;
 }
-
+.tab-v1 {
+    margin-top:40px;
+    margin-bottom: 20px;
+}
+.col {
+    float:left;
+    margin: 0 15px;
+    padding: 5px;
+    width: calc(100% / 3 - 45px);
+    white-space: nowrap;
+    min-width: 200px;
+    min-height: 1px;
+}
 .x-title-item {
              
 
