--- a/assets/css/util.less
+++ b/assets/css/util.less
@@ -184,6 +184,20 @@
 
 /* ========== typography ================== */
 
+h1.normal {
+    font-size: 1.2rem !important; 
+    font-weight:normal;
+    margin: 2px;
+}
+
+p.normal {
+    font-size: 1.1rem !important; 
+    font-weight:normal;
+    margin: 0;
+    padding: 4px;
+}
+
+
 .x-textleft {
     text-align: left !important;
 }
