--- a/assets/css/jobwell.less
+++ b/assets/css/jobwell.less
@@ -35,5 +35,9 @@
             color: @jfBlue;
         }
         
+        .x-serpshowme {
+            color:coral;
+        }
+        
     }
 }
